优化对代码块中#开头文本处理